Adding Error-Handling for user-service